@@ -1,14 +1,11 @@
 package gift.controller;
 
+import gift.exception.ProductException;
 import gift.model.dto.ProductRequestDto;
 import gift.model.dto.ProductResponseDto;
-import gift.exception.ProductErrorCode;
-import gift.exception.ProductException;
-import gift.validator.ProductValidator;
 import gift.repository.ProductDao;
 import jakarta.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
@@ -24,11 +21,9 @@ import org.springframework.web.bind.annotation.RequestMapping;
 public class AdminController {
 
     private final ProductDao productDao;
-    private final ProductValidator productValidator;
 
-    public AdminController(ProductDao productDao, ProductValidator productValidator) {
+    public AdminController(ProductDao productDao) {
         this.productDao = productDao;
-        this.productValidator = productValidator;
     }
 
     @GetMapping
@@ -36,7 +31,7 @@ public class AdminController {
         List<ProductResponseDto> productList = productDao.selectAllProduct()
             .stream()
             .map(ProductResponseDto::from)
-            .collect(Collectors.toList());
+            .toList();
         model.addAttribute("productList", productList);
         return "list";
     }
@@ -52,9 +47,6 @@ public class AdminController {
         BindingResult bindingResult) {
         if (bindingResult.hasErrors()) {
             return "add-product-form";
-        }
-        if (productValidator.hasKakaoWord(productRequestDto)) {
-            throw new ProductException(ProductErrorCode.HAS_KAKAO_WORD);
         }
         productDao.insertProduct(productRequestDto.toEntity());
         return "redirect:/admin/list";
@@ -73,9 +65,6 @@ public class AdminController {
         BindingResult bindingResult) {
         if (bindingResult.hasErrors()) {
             return "modify-product-form";
-        }
-        if (productValidator.hasKakaoWord(productRequestDto)) {
-            throw new ProductException(ProductErrorCode.HAS_KAKAO_WORD);
         }
         productDao.updateProductById(id, productRequestDto.toEntity());
         return "redirect:/admin/list";
