@@ -2,13 +2,9 @@ package gift.controller;
 
 import gift.model.dto.ProductRequestDto;
 import gift.model.dto.ProductResponseDto;
-import gift.validator.ProductValidator;
-import gift.exception.ProductErrorCode;
-import gift.exception.ProductException;
 import gift.repository.ProductDao;
 import jakarta.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -23,11 +19,9 @@ import org.springframework.web.bind.annotation.RestController;
 public class ProductController {
 
     private final ProductDao productDao;
-    private final ProductValidator productValidator;
 
-    public ProductController(ProductDao productDao, ProductValidator productValidator) {
+    public ProductController(ProductDao productDao) {
         this.productDao = productDao;
-        this.productValidator = productValidator;
     }
 
     @GetMapping
@@ -35,7 +29,7 @@ public class ProductController {
         return productDao.selectAllProduct()
             .stream()
             .map(ProductResponseDto::from)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @GetMapping("/{id}")
@@ -45,18 +39,12 @@ public class ProductController {
 
     @PostMapping
     public void addProduct(@Valid @RequestBody ProductRequestDto productRequestDto) {
-        if (productValidator.hasKakaoWord(productRequestDto)) {
-            throw new ProductException(ProductErrorCode.HAS_KAKAO_WORD);
-        }
         productDao.insertProduct(productRequestDto.toEntity());
     }
 
     @PutMapping("/{id}")
     public void updateProduct(@Valid @RequestBody ProductRequestDto productRequestDto,
         @PathVariable("id") Long id) {
-        if (productValidator.hasKakaoWord(productRequestDto)) {
-            throw new ProductException(ProductErrorCode.HAS_KAKAO_WORD);
-        }
         productDao.updateProductById(id, productRequestDto.toEntity());
     }
 
@@ -64,4 +52,5 @@ public class ProductController {
     public void deleteProduct(@PathVariable("id") Long id) {
         productDao.deleteProductById(id);
     }
+
 }
